# feup-cal-proj

./: .gitignore  README.md
ecoponto_waste_pickup/: CMakeLists.txt
ecoponto_waste_pickup/maps/MyMap/: MyMapEdges.txt  MyMapNodes.txt
ecoponto_waste_pickup/src/: ecoponto_waste_pickup.cpp
ecoponto_waste_pickup/src/Algorithms/: AStar.cpp  AStar.h  DFS.cpp  DFS.h  Dijkstra.cpp  Dijkstra.h  GraphSearchAlgorithm.cpp  GraphSearchAlgorithm.h  NearestNeighbour.cpp  NearestNeighbour.h
ecoponto_waste_pickup/src/Graph/: Container.cpp  Container.h  DijNode.cpp  DijNode.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Truck.cpp  Truck.h  edge.cpp  edge.h
ecoponto_waste_pickup/src/GraphViewer/: graphviewer.cpp
ecoponto_waste_pickup/src/UserInterface/: UserInterface.cpp  UserInterface.h
ecoponto_waste_pickup/src/Utils/: MapParser.cpp  MapParser.h  defs.h
first_delivery/: floyd_warshall  nearest_neighbor
first_delivery/res/: back_tracking  dijkstra  floyd_warshall
